UX Fixes for dark mode

--- a/lhc_web/design/defaulttheme/css/app-dark.css
+++ b/lhc_web/design/defaulttheme/css/app-dark.css
@@ -479,6 +479,7 @@ div.message-row.response div.msg-body{
     display:inline-block;
     text-align: left;
     max-width:90%;
+    position: relative;
 }
 
 
@@ -2020,14 +2021,14 @@ html {
     text-decoration: none;
     border-radius:20px;
     padding: 0px 5px 5px;
-    border:1px solid #fff;
+    border:1px solid #3f3f3f;
     background: #3267e4;
 }
 
 .reactions-holder-admin {
     right:-55px;
     margin-top: -5px;
-    background: #EAEAEAFF;
+    background: #4e4e4e;
     display:none;
 }
 
